sgleam-core-tests/tests/snapshots/integration__run_images@polygon4.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/polygon4.gleam
---
<svg width="80.0" height="80.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 0.0 0.0 L 80.0 0.0 L 80.0 80.0 L 0.0 80.0 Z" fill="rgba(60, 179, 113, 1.0)" />
    <path d="M 15.0 15.0 L 65.0 15.0 L 15.0 65.0 L 65.0 65.0 Z" fill="none" stroke="rgba(47, 79, 79, 1.0)" stroke-width="10.0" stroke-linecap="round" stroke-linejoin="round" />
  </g>
</svg>
