sgleam-core-tests/tests/snapshots/integration__run_images@pulled_regular_polygon1.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/pulled_regular_polygon1.gleam
---
<svg width="81.0" height="77.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 40.450849718747364 0.0 C 47.22301482595944 15.210531869749303 64.34290987961298 27.648863701217223 80.90169943749473 29.389262614623654 C 68.52833809329611 40.53028721049864 61.98912006663167 60.65593087716347 65.45084971874736 76.94208842938133 C 51.03152674573646 68.61708842938134 29.87017269175827 68.61708842938134 15.45084971874737 76.94208842938133 C 18.912579370863064 60.65593087716346 12.373361344198614 40.530287210498635 0.0 29.38926261462364 C 16.558789557881745 27.648863701217213 33.67868461153529 15.2105318697493 40.450849718747364 0.0 Z" fill="rgba(0, 128, 0, 1.0)" />
</svg>
