sgleam-core-tests/tests/snapshots/integration__run_images@pulled_regular_polygon2.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/pulled_regular_polygon2.gleam
---
<svg width="100.00000000000001" height="86.60254037844388" xmlns="http://www.w3.org/2000/svg">
  <path d="M 25.000000000000014 86.60254037844388 C 31.47047612756303 62.45439472121717 24.14814565722671 49.771746316784956 0.0 43.301270189221945 C 24.148145657226703 36.83079406165892 31.470476127563007 24.148145657226717 24.999999999999982 1.4210854715202004e-14 C 42.67766952966369 17.677669529663707 57.322330470336325 17.677669529663703 75.00000000000001 0.0 C 68.52952387243701 24.148145657226703 75.85185434277331 36.83079406165891 100.00000000000001 43.301270189221924 C 75.8518543427733 49.77174631678494 68.52952387243698 62.45439472121716 75.0 86.60254037844388 C 57.32233047033631 68.9248708487802 42.6776695296637 68.92487084878019 25.000000000000014 86.60254037844388 Z" fill="none" stroke="rgba(255, 0, 0, 1.0)" />
</svg>
