sgleam-core-tests/tests/snapshots/integration__run_images@pulled_regular_polygon3.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/pulled_regular_polygon3.gleam
---
<svg width="50.000000000000036" height="50.000000000000014" xmlns="http://www.w3.org/2000/svg">
  <path d="M 7.105427357601002e-15 50.000000000000014 C 7.105427357601002e-15 50.000000000000014 0.0 7.105427357601002e-15 0.0 7.105427357601002e-15 C 0.0 7.105427357601002e-15 50.0 0.0 50.0 0.0 C 50.0 0.0 50.000000000000036 49.99999999999998 50.000000000000036 49.99999999999998 C 50.000000000000036 49.99999999999998 7.105427357601002e-15 50.000000000000014 7.105427357601002e-15 50.000000000000014 Z" fill="rgba(255, 165, 0, 1.0)" />
</svg>
