sgleam-core-tests/tests/snapshots/integration__run_images@radial_star1.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/radial_star1.gleam
---
<svg width="118.25658016144473" height="118.25658016144472" xmlns="http://www.w3.org/2000/svg">
  <path d="M 34.63655040935662 118.2565801614447 L 53.47143583122998 64.78514433021473 L 1.4210854715202004e-14 83.62002975208812 L 51.128290080722365 59.12829008072236 L 0.0 34.636550409356644 L 53.47143583122998 53.47143583122998 L 34.63655040935664 0.0 L 59.128290080722365 51.12829008072236 L 83.62002975208813 1.4210854715202004e-14 L 64.78514433021475 53.471435831229975 L 118.25658016144473 34.63655040935663 L 67.12829008072237 59.12829008072236 L 118.25658016144473 83.62002975208806 L 64.78514433021475 64.78514433021473 L 83.6200297520881 118.25658016144472 L 59.128290080722365 67.12829008072237 Z" fill="rgba(47, 79, 79, 1.0)" />
</svg>
