sgleam-core-tests/tests/snapshots/integration__run_images@radial_star2.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/radial_star2.gleam
---
<svg width="79.61477813377576" height="79.61477813377576" xmlns="http://www.w3.org/2000/svg">
  <path d="M 35.886703453705465 79.61477813377576 L 33.95467940640404 69.2309474789848 L 28.196001976709383 78.08500249617623 L 28.326886095935187 67.52377504222648 L 20.951519593847987 75.08423964082209 L 23.140282076299812 64.75147743596423 L 14.431657700342065 70.72780720139735 L 18.594185631291456 61.020592502484305 L 8.8869709323784 65.1831204334337 L 14.863300697811518 56.474496057475946 L 4.530538492953681 58.663258539927796 L 12.091003091549275 51.28789203784058 L 1.5297756375995277 51.418776157066375 L 10.383830654790966 45.660098727371725 L 7.105427357601002e-15 43.728074680070314 L 9.807389066887879 39.807389066887886 L 0.0 35.88670345370546 L 10.383830654790962 33.95467940640404 L 1.5297756375995206 28.196001976709397 L 12.091003091549268 28.3268860959352 L 4.530538492953674 20.951519593847973 L 14.863300697811521 23.140282076299812 L 8.886970932378397 14.431657700342068 L 18.59418563129145 18.594185631291456 L 14.431657700342072 8.88697093237839 L 23.14028207629979 14.863300697811535 L 20.951519593847966 4.530538492953681 L 28.326886095935194 12.091003091549272 L 28.196001976709383 1.5297756375995277 L 33.95467940640402 10.38383065479097 L 35.88670345370546 0.0 L 39.80738906688787 9.807389066887879 L 43.728074680070286 0.0 L 45.660098727371725 10.383830654790966 L 51.41877615706636 1.5297756375995206 L 51.28789203784058 12.091003091549279 L 58.66325853992778 4.530538492953674 L 56.47449605747593 14.863300697811514 L 65.1831204334337 8.886970932378404 L 61.0205925024843 18.59418563129145 L 70.72780720139735 14.431657700342043 L 64.75147743596423 23.140282076299812 L 75.08423964082206 20.951519593847962 L 67.52377504222649 28.326886095935194 L 78.08500249617623 28.196001976709347 L 69.23094747898479 33.95467940640402 L 79.61477813377576 35.88670345370546 L 69.80738906688788 39.80738906688787 L 79.61477813377576 43.728074680070314 L 69.23094747898479 45.660098727371725 L 78.08500249617623 51.41877615706636 L 67.52377504222649 51.28789203784055 L 75.08423964082209 58.66325853992778 L 64.75147743596425 56.47449605747593 L 70.72780720139735 65.1831204334337 L 61.020592502484334 61.02059250248428 L 65.18312043343371 70.72780720139734 L 56.474496057475946 64.75147743596423 L 58.663258539927796 75.08423964082206 L 51.287892037840564 67.52377504222649 L 51.41877615706638 78.08500249617623 L 45.66009872737174 69.23094747898479 L 43.728074680070335 79.61477813377576 L 39.807389066887886 69.80738906688788 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" />
</svg>
