sgleam-core-tests/tests/snapshots/integration__run_images@rectangle2.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/rectangle2.gleam
---
<svg width="20.0" height="40.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.0 0.0 L 20.0 0.0 L 20.0 40.0 L 0.0 40.0 Z" fill="rgba(0, 0, 0, 1.0)" />
</svg>
