sgleam-core-tests/tests/snapshots/integration__run_images@regular_polygon1.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/regular_polygon1.gleam
---
<svg width="50.00000000000001" height="43.30127018922194" xmlns="http://www.w3.org/2000/svg">
  <path d="M 25.000000000000004 0.0 L 50.00000000000001 43.30127018922194 L 0.0 43.30127018922194 Z" fill="none" stroke="rgba(255, 0, 0, 1.0)" />
</svg>
